# mlflow_mcp_server

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  server.py
src/: __init__.py  exceptions.py
src/core/: __init__.py  config.py
src/models/: __init__.py  schemas.py
src/tools/: __init__.py  artifacts.py  experiments.py  models.py  runs.py  system.py
src/utils/: __init__.py  mlflow_client.py
